@@ -1,9 +1,6 @@
 package io.github.alikelleci.eventify.messaging.commandhandling;
 
 import io.github.alikelleci.eventify.common.exceptions.AggregateIdMismatchException;
-import io.github.alikelleci.eventify.common.exceptions.AggregateIdMissingException;
-import io.github.alikelleci.eventify.common.exceptions.PayloadMissingException;
-import io.github.alikelleci.eventify.common.exceptions.TopicInfoMissingException;
 import io.github.alikelleci.eventify.messaging.Metadata;
 import io.github.alikelleci.eventify.messaging.commandhandling.exceptions.CommandExecutionException;
 import io.github.alikelleci.eventify.messaging.eventhandling.Event;
@@ -11,7 +8,6 @@ import io.github.alikelleci.eventify.messaging.eventsourcing.Aggregate;
 import jakarta.validation.ConstraintViolation;
 import jakarta.validation.ConstraintViolationException;
 import jakarta.validation.Validation;
-import jakarta.validation.ValidationException;
 import jakarta.validation.Validator;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
@@ -25,7 +21,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 import java.util.function.BiFunction;
-import java.util.stream.Collectors;
 
 @Slf4j
 public class CommandHandler implements BiFunction<Aggregate, Command, List<Event>> {
@@ -38,24 +33,18 @@ public class CommandHandler implements BiFunction<Aggregate, Command, List<Event
   public CommandHandler(Object target, Method method) {
     this.target = target;
     this.method = method;
- }
+  }
 
   @Override
   public List<Event> apply(Aggregate aggregate, Command command) {
     log.debug("Handling command: {} ({})", command.getType(), command.getAggregateId());
+
     try {
       validate(command.getPayload());
       return doInvoke(aggregate, command);
 
     } catch (Exception e) {
-      Throwable throwable = ExceptionUtils.getRootCause(e);
-      String message = ExceptionUtils.getRootCauseMessage(e);
-      if (throwable instanceof ValidationException) {
-        log.debug("Handling command failed: ", throwable);
-      } else {
-        log.error("Handling command failed: ", throwable);
-      }
-      throw new CommandExecutionException(message, throwable);
+      throw new CommandExecutionException(ExceptionUtils.getRootCauseMessage(e), ExceptionUtils.getRootCause(e));
     }
   }
 
@@ -90,20 +79,11 @@ public class CommandHandler implements BiFunction<Aggregate, Command, List<Event
                 .addAll(command.getMetadata())
                 .build())
             .build())
-        .collect(Collectors.toList());
+        .toList();
 
     events.forEach(event -> {
-      if (event.getPayload() == null) {
-        throw new PayloadMissingException("You are trying to publish an event without a payload.");
-      }
-      if (event.getTopicInfo() == null) {
-        throw new TopicInfoMissingException("You are trying to publish an event without any topic information. Please annotate your event with @TopicInfo.");
-      }
-      if (event.getAggregateId() == null) {
-        throw new AggregateIdMissingException("You are trying to publish an event without a proper aggregate identifier. Please annotate your field containing the aggregate identifier with @AggregateId.");
-      }
       if (!StringUtils.equals(event.getAggregateId(), command.getAggregateId())) {
-        throw new AggregateIdMismatchException("Aggregate identifier does not match. Expected " + command.getAggregateId() + ", but was " + event.getAggregateId());
+        throw new AggregateIdMismatchException("Aggregate identifier does not match for event " + event.getType() +". Expected " + command.getAggregateId() + ", but was " + event.getAggregateId());
       }
     });
 
